# k8s-autopilot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
autopilot/: __init__.py  config.py  main.py
autopilot/audit/: logger.py
autopilot/engines/: approval_engine.py  context_collector.py  diagnosis_engine.py  remediation_engine.py
autopilot/handlers/: node_handler.py  pod_handler.py
autopilot/integrations/: pagerduty.py  prometheus.py  slack.py
autopilot/remediations/: deployment_actions.py  pod_actions.py  registry.py
autopilot/utils/: circuit_breaker.py  k8s_client.py  rate_limiter.py
crds/: autopilot-policy.yaml  remediation-audit.yaml
deploy/: deployment.yaml  example-policy.yaml
operator/: config.py  main.py
operator/audit/: logger.py
operator/engines/: approval_engine.py  context_collector.py  diagnosis_engine.py  remediation_engine.py
operator/handlers/: node_handler.py  pod_handler.py
operator/integrations/: pagerduty.py  prometheus.py  slack.py
operator/remediations/: deployment_actions.py  pod_actions.py  registry.py
operator/utils/: circuit_breaker.py  k8s_client.py  rate_limiter.py
tests/: conftest.py
tests/unit/: test_approval_engine.py  test_audit_logger.py  test_circuit_breaker.py  test_config.py  test_diagnosis_engine.py  test_node_handler.py  test_pod_handler.py  test_rate_limiter.py  test_registry.py  test_remediation_actions.py  test_remediation_engine.py
