[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "k8s-autopilot"
version = "0.1.0"
description = "AI-powered Kubernetes remediation operator"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["kubernetes", "operator", "ai", "sre", "remediation", "kopf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kopf>=1.37",
    "kubernetes-asyncio>=29",
    "anthropic>=0.28",
    "aiohttp>=3.9",
    "slack-sdk>=3.27",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
]

[project.scripts]
k8s-autopilot = "operator.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["operator"]
omit = ["tests/*", "operator/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
